2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/Traffic__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Traffic Department</description>
    <label>Traffic</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Traffic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traffic</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>