2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Agent_Quote_Ref_Billing_Party__c.field-meta.xml
<CustomField>
    <fullName>Agent_Quote_Ref_Billing_Party__c</fullName>
    <inlineHelpText>Agent Quote Reference or Billing Party</inlineHelpText>
    <label>Agent Quote Reference / Billing Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>