2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/APOE_POE__c.field-meta.xml
<CustomField>
    <fullName>APOE_POE__c</fullName>
    <formula>Opportunity_Name__r.APOE_POE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APOE / POE</label>
    <type>Text</type>
</CustomField>