2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/AWB_BL_Number__c.field-meta.xml
<CustomField>
    <fullName>AWB_BL_Number__c</fullName>
    <formula>Opportunity_Name__r.BL_AWB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWB / BL Number</label>
    <type>Text</type>
</CustomField>