2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Instructions__c</fullName>
    <description>Hidden field for billing instructions in Way Bill (Traffic Object)</description>
    <label>Billing Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipment_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>You are to bill all destination charges to:</fullName>
            </value>
            <value>
                <fullName>You are to bill us according to your quote of:</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>