2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Booking_Agent_Company__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agent_Company__c</fullName>
    <formula>Opportunity_Name__r.BookingAgent2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Agent Company</label>
    <type>Text</type>
</CustomField>