2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Booking_Agent_Company_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agent_Company_Details__c</fullName>
    <formula>Opportunity_Name__r.BookingAgent2__r.BillingStreet &amp; &quot; &quot; &amp; Opportunity_Name__r.BookingAgent2__r.BillingCity &amp; &quot; &quot; &amp; Opportunity_Name__r.BookingAgent2__r.BillingState &amp; &quot; &quot; &amp; Opportunity_Name__r.BookingAgent2__r.BillingPostalCode &amp; &quot; &quot; &amp; Opportunity_Name__r.BookingAgent2__r.BillingCountry &amp; BR() &amp;
&quot;Tel: &quot; &amp; Opportunity_Name__r.BookingAgent2__r.Phone &amp; &quot; &quot; &amp; &quot;Fax: &quot; &amp; Opportunity_Name__r.BookingAgent2__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Agent Company Details</label>
    <type>Text</type>
</CustomField>