2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Booking_Agent_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agent_Contact_Details__c</fullName>
    <formula>&quot;Tel: &quot; &amp; Opportunity_Name__r.Booker_TEL__c &amp; &quot; &quot; &amp; &quot;Fax: &quot; &amp; Opportunity_Name__r.Booker_FAX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Agent Contact Details</label>
    <type>Text</type>
</CustomField>