2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Booking_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agent_Email__c</fullName>
    <formula>Opportunity_Name__r.Booker_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Agent Email</label>
    <type>Text</type>
</CustomField>