2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Chargeable_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight_KG__c</fullName>
    <formula>Opportunity_Name__r.Chargeable_kgs_AIR_OLD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable Weight (KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>