2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <formula>Opportunity_Name__r.Cntr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Number</label>
    <type>Text</type>
</CustomField>