2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Container_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Container_Type_2__c</fullName>
    <label>Container Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CASE</fullName>
            </value>
            <value>
                <fullName>CRATE</fullName>
            </value>
            <value>
                <fullName>LIFTVAN</fullName>
            </value>
            <value>
                <fullName>20&apos; CONTAINER</fullName>
            </value>
            <value>
                <fullName>40&apos; CONTAINER</fullName>
            </value>
            <value>
                <fullName>40&apos; HIGH CUBE CONTAINER</fullName>
            </value>
            <value>
                <fullName>45&apos; HC</fullName>
            </value>
            <value>
                <fullName>TRIWALL</fullName>
            </value>
            <value>
                <fullName>CASES</fullName>
            </value>
            <value>
                <fullName>LIFTVANS</fullName>
            </value>
            <value>
                <fullName>PALLET</fullName>
            </value>
            <value>
                <fullName>PALLETS</fullName>
            </value>
            <value>
                <fullName>LOOSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>