2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <defaultValue>&quot;OF USED PERSONAL EFFECTS&quot; &amp; BR() &amp;
&quot;&amp; HOUSEHOLD GOODS&quot;</defaultValue>
    <label>Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>