2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <formula>Opportunity_Name__r.Destination_Address__c &amp; &quot; &quot; &amp;  Opportunity_Name__r.Destination_City__c &amp; BR() &amp;
Opportunity_Name__r.Destination_Country__c &amp; &quot; &quot; &amp;  Opportunity_Name__r.Destination_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>