2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Destination_Agent_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Destination_Agent_Contact_Details__c</fullName>
    <formula>&quot;Tel: &quot; &amp; Opportunity_Name__r.Contact_Person_TEL__c &amp; &quot; &quot; &amp;  &quot;Fax: &quot; &amp; Opportunity_Name__r.Contact_Person_FAX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Agent Contact Details</label>
    <type>Text</type>
</CustomField>