2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Destination_Agent_Details_2__c.field-meta.xml
<CustomField>
    <fullName>Destination_Agent_Details_2__c</fullName>
    <description>Destination Agent company details without TEL and FAX for departure notice</description>
    <formula>Opportunity_Name__r.Destination_Agent__r.BillingStreet &amp; &quot; &quot; &amp; Opportunity_Name__r.Destination_Agent__r.BillingCity &amp; &quot; &quot; &amp; Opportunity_Name__r.Destination_Agent__r.BillingState &amp; &quot; &quot; &amp; Opportunity_Name__r.Destination_Agent__r.BillingPostalCode &amp; &quot; &quot; &amp; Opportunity_Name__r.Destination_Agent__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Agent Company Details 2</label>
    <type>Text</type>
</CustomField>