2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Destination_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Destination_Agent_Email__c</fullName>
    <formula>Opportunity_Name__r.Contact_Person_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Agent Email</label>
    <type>Text</type>
</CustomField>