2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Destination_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Agent_Name__c</fullName>
    <formula>Opportunity_Name__r.Destination_Agent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Agent Company</label>
    <type>Text</type>
</CustomField>