2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Enclosures__c.field-meta.xml
<CustomField>
    <fullName>Enclosures__c</fullName>
    <label>Enclosures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Air Way Bill</fullName>
            </value>
            <value>
                <fullName>Bill of Lading</fullName>
            </value>
            <value>
                <fullName>Customs Form</fullName>
            </value>
            <value>
                <fullName>Destination Rates</fullName>
            </value>
            <value>
                <fullName>Electrical List</fullName>
            </value>
            <value>
                <fullName>Helutrans Way Bill</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Keys</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Personal Itinerary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>