2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <formula>Opportunity_Name__r.ETA_String__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETA</label>
    <type>Text</type>
</CustomField>