2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <formula>Opportunity_Name__r.ETD_String__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETD</label>
    <type>Text</type>
</CustomField>