2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Gross_Weight_Combi__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Combi__c</fullName>
    <label>Gross Weight Combined</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>