2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Gross_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_KG__c</fullName>
    <label>Gross Weight (KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>