2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number__c</fullName>
    <formula>CASE (LEN(Opportunity_Name__r.Policy_No__c), 
0, &quot;NA&quot;,
Opportunity_Name__r.Policy_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Policy Number</label>
    <type>Text</type>
</CustomField>