2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <formula>Opportunity_Name__r.OB_Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>