2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Load_1__c.field-meta.xml
<CustomField>
    <fullName>Load_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load 1</label>
    <type>Checkbox</type>
</CustomField>