2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Marks_Numbers_LCL_Air__c.field-meta.xml
<CustomField>
    <fullName>Marks_Numbers_LCL_Air__c</fullName>
    <description>Marks &amp; Numbers for LCL or Air shipment</description>
    <label>Marks &amp; Numbers (LCL/Air)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>