2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Ocean_BL_MAWB__c.field-meta.xml
<CustomField>
    <fullName>Ocean_BL_MAWB__c</fullName>
    <label>Ocean Bill of Lading / MAWB No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>