2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Origin_Agent_Details__c.field-meta.xml
<CustomField>
    <fullName>Origin_Agent_Details__c</fullName>
    <formula>Opportunity_Name__r.Origin_Agent__r.BillingStreet &amp; &quot; &quot; &amp; Opportunity_Name__r.Origin_Agent__r.BillingCity &amp; &quot; &quot; &amp; Opportunity_Name__r.Origin_Agent__r.BillingState &amp; &quot; &quot; &amp; Opportunity_Name__r.Origin_Agent__r.BillingPostalCode &amp; &quot; &quot; &amp; Opportunity_Name__r.Origin_Agent__r.BillingCountry &amp; BR() &amp;
&quot;Tel: &quot; &amp; Opportunity_Name__r.Origin_Agent__r.Phone &amp; &quot; &quot; &amp;
&quot;Fax: &quot; &amp; Opportunity_Name__r.Origin_Agent__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Agent Company Details</label>
    <type>Text</type>
</CustomField>