2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Origin_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Agent_Name__c</fullName>
    <formula>Opportunity_Name__r.Origin_Agent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Agent Company</label>
    <type>Text</type>
</CustomField>