2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Other_Enclosures__c.field-meta.xml
<CustomField>
    <fullName>Other_Enclosures__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Other Enclosures</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>