2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Other_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Other_Special_Instructions__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Other Special Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>