2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>