2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Packages_2__c.field-meta.xml
<CustomField>
    <fullName>Packages_2__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Packages 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>