2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of packages in a container load</description>
    <label>Packages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>