2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Packing_Address__c.field-meta.xml
<CustomField>
    <fullName>Packing_Address__c</fullName>
    <formula>Opportunity_Name__r.Survey_Address__c &amp; BR() &amp; Opportunity_Name__r.Survey_Country__c &amp; &quot; &quot; &amp; Opportunity_Name__r.Survey_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing Address</label>
    <type>Text</type>
</CustomField>