2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <defaultValue>&quot;Singapore&quot;</defaultValue>
    <description>Port of Departure</description>
    <label>POD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>