2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Quantity_of_Container_2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Container_2__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity of Container 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>