2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Seal_Number__c.field-meta.xml
<CustomField>
    <fullName>Seal_Number__c</fullName>
    <formula>Opportunity_Name__r.Seal_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seal Number</label>
    <type>Text</type>
</CustomField>