2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Door to Door</fullName>
                <default>true</default>
                <label>Door to Door</label>
            </value>
            <value>
                <fullName>Door to Port</fullName>
            </value>
            <value>
                <fullName>Door to Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>