2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Shipper_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Account__c</fullName>
    <formula>Opportunity_Name__r.Shipper_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Account</label>
    <type>Text</type>
</CustomField>