2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <formula>Opportunity_Name__r.Shipper_First_Name__c &amp; &quot; &quot; &amp; Opportunity_Name__r.Shipper_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Name</label>
    <type>Text</type>
</CustomField>