2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Shipping_Line_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line_Carrier__c</fullName>
    <label>Shipping Line / Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>