2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Shipping_Mode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Mode__c</fullName>
    <label>Shipping Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BY SEA</fullName>
            </value>
            <value>
                <fullName>BY AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>