2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Special_Instruction_Details__c.field-meta.xml
<CustomField>
    <fullName>Special_Instruction_Details__c</fullName>
    <label>Special Instruction Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipment_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Door to Door shipment, please contact shippers for immediate clearance and delivery. Helutrans will not be responsible for any storage charges.</fullName>
                <default>true</default>
                <label>Door to Door shipment, please contact shippers for immediate clearance and delivery. Helutrans will not be responsible for any storage charges.</label>
            </value>
            <value>
                <fullName>Door to Port shipment, please contact shippers for immediate clearance. Helutrans will not be responsible for any storage charges.</fullName>
            </value>
            <value>
                <fullName>Door to Door shipment, please contact shippers for immediate clearance and delivery. Helutrans will not be responsible for any charges and delivery incurred at destination.</fullName>
            </value>
            <value>
                <fullName>Door to Port shipment, please contact shippers for immediate clearance. Helutrans will not be responsible for any charges incurred at destination.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>