2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Sub_Total_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_1__c</fullName>
    <label>Sub Total 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>