2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Sub_Total_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_2__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Sub Total 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>