2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/THC__c.field-meta.xml
<CustomField>
    <fullName>THC__c</fullName>
    <label>THC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>