2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Total_Content__c.field-meta.xml
<CustomField>
    <fullName>Total_Content__c</fullName>
    <label>Total Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>