2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Total_Gross_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Weight_KG__c</fullName>
    <label>Total Gross Weight (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>