2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Total_Volume_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume_CBM__c</fullName>
    <label>Total Volume (CBM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>