2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Vessel_Flight__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Flight__c</fullName>
    <formula>Opportunity_Name__r.Vessel_Flight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel / Flight Number</label>
    <type>Text</type>
</CustomField>