2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Volume_CBM__c.field-meta.xml
<CustomField>
    <fullName>Volume_CBM__c</fullName>
    <label>Volume (CBM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>