2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Volume_Combi__c.field-meta.xml
<CustomField>
    <fullName>Volume_Combi__c</fullName>
    <label>Volume Combined</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>