2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Volume_Weight__c.field-meta.xml
<CustomField>
    <fullName>Volume_Weight__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Volume / Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>