2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Voyage_ID__c.field-meta.xml
<CustomField>
    <fullName>Voyage_ID__c</fullName>
    <label>Voyage ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>