2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/fields/Your_Rate__c.field-meta.xml
<CustomField>
    <fullName>Your_Rate__c</fullName>
    <label>Your Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>