2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/recordTypes/Traffic_Air.recordType-meta.xml
<RecordType>
    <fullName>Traffic_Air</fullName>
    <active>true</active>
    <description>Traffic - Air shipments</description>
    <label>Traffic - Air</label>
</RecordType>