2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/recordTypes/Traffic_FCL.recordType-meta.xml
<RecordType>
    <fullName>Traffic_FCL</fullName>
    <active>true</active>
    <description>Traffic - FCL shipments</description>
    <label>Traffic - FCL</label>
</RecordType>