2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/recordTypes/Traffic_LCL.recordType-meta.xml
<RecordType>
    <fullName>Traffic_LCL</fullName>
    <active>true</active>
    <description>Traffic - LCL shipments</description>
    <label>Traffic - LCL</label>
</RecordType>