2nd training/Community/Community/Community1/force-app/main/default/objects/Traffic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>